# sophia_sim

./: CMakeLists.txt  ISPH.cuh  ISPH_Calc.cuh  ISPH_Calc_backup.cuh  Makefile  SOPHIA_gpu  SOPHIA_gpu.cu  SophiaSim.cu  SophiaSim.cuh  common_includes.cuh  function_init.cuh  functions_ALE.cuh  functions_APS.cuh  functions_BC.cuh  functions_IBM.cuh  functions_INTERACTION.cuh  functions_MASS.cuh  functions_NNPS.cuh  functions_OUTPUT.cuh  functions_PPE.cuh  functions_PREP.cuh  functions_PST.cuh  functions_TIME.cuh  functions_TIME_ISPH.cuh  functions_cellAPR.cuh  physicalproperties.cu  physicalproperties.cuh
input/: data.txt  input.txt  input_1p_dx40.txt  input_1p_dx80.txt  input_2p_dx40.txt  input_2p_dx80.txt  solv.txt
plotdata/: boundary_0stp.vtk  fluid_0stp.vtk  fluid_1000stp.vtk  fluid_100stp.vtk  fluid_1026stp.vtk  fluid_1051stp.vtk  fluid_1076stp.vtk  fluid_1101stp.vtk  fluid_1126stp.vtk  fluid_1151stp.vtk  fluid_1176stp.vtk  fluid_1201stp.vtk  fluid_1226stp.vtk  fluid_1251stp.vtk  fluid_125stp.vtk  fluid_1276stp.vtk  fluid_1301stp.vtk  fluid_1326stp.vtk  fluid_1351stp.vtk  fluid_1376stp.vtk  fluid_1401stp.vtk  fluid_1426stp.vtk  fluid_1451stp.vtk  fluid_1476stp.vtk  fluid_1501stp.vtk  fluid_150stp.vtk  fluid_1526stp.vtk  fluid_1551stp.vtk  fluid_1576stp.vtk  fluid_1601stp.vtk  fluid_1626stp.vtk  fluid_1651stp.vtk  fluid_1676stp.vtk  fluid_1701stp.vtk  fluid_1726stp.vtk  fluid_1751stp.vtk  fluid_175stp.vtk  fluid_1776stp.vtk  fluid_1801stp.vtk  fluid_1826stp.vtk  (+163 more)
record/: probe.txt
src/: Parameters.cuh  SOPHIA_gpu.cu  Variable_Type.cuh  class_Cuda_Particle_Array.cuh  (+5 more)
